# task-multiplayer-fps

./: .gitignore  Cargo.toml  README.md  clear  dev-client  dev-server  do  doclient  doserver
_temp/: common_questions_answers.txt  high_level_overview.txt
_temp/coco/: level.blend  level.blend1  level1.blend  level1.blend1  level2.blend  level2.blend1  level3.blend  level3.blend1  plane25x25.blend  player.blend  player.blend1  playerOx.blend  playerOx.blend1
assets/: level1.gltf  level2.gltf  level3.gltf  player.gltf
mw/client/: Cargo.toml
mw/client/src/: main.rs
mw/client/src/connection/: connect.rs
mw/client/src/gui/fps/: mod.rs  show_fps.rs
mw/client/src/gui/title/: mod.rs  show_time.rs
mw/client/src/keyboard/: activity.rs
mw/server/: Cargo.toml
mw/server/src/: client.rs  main.rs  protocol.rs  server.rs  shared.rs
mw/server/src/connection/: connect.rs
mw/server/src/user/: info.rs
src/: client.rs  level.rs  main.rs  protocol.rs  server.rs  shared.rs
src/gui/: mod.rs
src/gui/fps/: show_fps.rs
src/levels/: level.rs  level1.rs  level2.rs  level3.rs  mod.rs
src/user/: info.rs
