[package]
name = "hybrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["bevy_core_pipeline"] }
bevy_framepace = "0.14.1"
bevy_egui = "0.24.0"
# bevy_async_system = "0.1.1"
# lightyear = { version = "0.7.0", features = ["webtransport"] }
lightyear = { git = "https://github.com/cBournhonesque/lightyear.git", rev = "0206f5f", features = ["webtransport", "render"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = { version = "1.0.75", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
derive_more = { version = "0.99", features = ["add", "mul"] }
rand = "0.8.1"
clap = { version = "4.4", features = ["derive"] }
mock_instant = "0.3"
metrics-exporter-prometheus = { version = "0.12.1", optional = true }
bevy-inspector-egui = "0.21.0"
tokio = { version = "1.34.0", features = ["rt", "macros"] }